--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Saif Haider Kayani
-logo: /assets/img/IMG_6146_circle.png
+logo: /assets/img/IMG_6146.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
