--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Saif Haider Kayani
-logo: /assets/img/IMG_6146.png
-#description: text below image
+logo: /assets/img/headshot_circle.png
+#description: IMG_6146
 #show_downloads: true
 theme: jekyll-theme-minimal
