--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Saif Haider Kayani
-logo: /assets/img/headshot_circle.tiff
+logo: /assets/img/headshot_circle.tif
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
