--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Saif Haider Kayani
 logo: /assets/headshot_circle.jpg
-#description: ORCID: 0000-0002-7945-5934 (h-index: 14)
-Contact: Saifkayani@gnu.ac.kr, Saifhaiderkayani@gmail.com
+#description: ORCID: 0000-0002-7945-5934 (h-index: 14) Contact: Saifkayani@gnu.ac.kr, Saifhaiderkayani@gmail.com
 #show_downloads: true
 theme: jekyll-theme-minimal
