--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: Saif Haider Kayani
 logo: /assets/headshot_circle.jpg
-#description: <a href="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en" target="_blank" rel="noopener"> 
-<img src="/assets/google_scholar_logo.png" alt="Google Scholar" style="height:22px; margin-top:10px;">
-</a>
+#description: <img src="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en/REPO/assets/google_scholar_logo.png">
 #show_downloads: true
 theme: jekyll-theme-minimal
