--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Saif Haider Kayani
 logo: /assets/headshot_circle.jpg
-#description: <img src="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en/REPO/assets/google_scholar_logo.png">
+description: <img src="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en/REPO/assets/google_scholar_logo.png">
 #show_downloads: true
 theme: jekyll-theme-minimal
