--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,24 @@
 title: Saif Haider Kayani
 logo: /assets/headshot_circle.jpg
 description: >
+  <div style="margin-top:10px; display:flex; gap:10px; align-items:center; flex-wrap:wrap;">
   <a href="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en" target="_blank" rel="noopener">
-    <img src="/assets/google_scholar_logo.png" style="height:22px; margin-top:10px;">
+    <img src="/assets/google_scholar_logo.png" style="height:22px;">
   </a>
+  <a href="https://www.linkedin.com/in/saif-haider-kayani-phd-22409961/" target="_blank" rel="noopener">
+      <img src="/assets/icons/linkedin_logo.png" alt="LinkedIn" style="height:22px;">
+    </a>
+    <a href="https://www.researchgate.net/profile/Saif-Kayani?ev=hdr_xprf" target="_blank" rel="noopener">
+      <img src="/assets/icons/researchgate.png" alt="Researchgate" style="height:22px;">
+    </a>
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=57191869471" target="_blank" rel="noopener">
+      <img src="/assets/icons/scopus_logo.png" alt="Scopus" style="height:22px;">
+    </a>
+    <a href="https://www.webofscience.com/wos/author/record/ABA-1504-2021" target="_blank" rel="noopener">
+      <img src="/assets/icons/clarivate.png" alt="Clarivate" style="height:22px;">
+    </a>
+    <a href="https://orcid.org/my-orcid?orcid=0000-0002-7945-5934" target="_blank" rel="noopener">
+      <img src="/assets/icons/orcid.png" alt="ORCID" style="height:22px;">
+    </a>
 #show_downloads: true
 theme: jekyll-theme-minimal
