--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ description: >
     </a>
   </div>
 
-  <div style="margin-top:16px; text-align:center;">
+  <div style="margin-top:16px; display:flex; justify-content:center;">
   <a href="https://scholar.google.com/citations?user=RjklPYMAAAAJ&hl=en" target="_blank" rel="noopener">
     <img src="/assets/citations.png"
          alt="Google Scholar metrics"
-         style="height:140px; width:auto; max-width:100%; display:inline-block;">
-  </a>
-</div>
+         style="height:140px; width:auto; max-width:100%; display:block;">
+    </a>
+    </div>
 
 theme: jekyll-theme-minimal
